--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
     display: flex;
 }
 .mine { 
+    background-size:cover;
     width: 30px;
     aspect-ratio: 1/1;
     border: .5px solid #808080;
