--- a/src/style.css
+++ b/src/style.css
@@ -90,10 +90,14 @@
 
 #controls {
     visibility: hidden;
-    display: ruby;
+    display: contents;
 }
 
 #controls input {
     width: 60px;
     margin-right: 20px;
+}
+
+#controls label {
+    margin-right: 10px;
 }
