--- a/src/style.css
+++ b/src/style.css
@@ -14,18 +14,25 @@
 
 #controls {
     position: absolute;
+    display: none;
     top: 8px;
     left: 8px;
-    display: grid;
     width: 150px;
     z-index: 2;
     border: 4px inset #dbdbdb;
     background-color: rgb(180, 180, 180);
+    color: #303030;
 }
 
-#controls div {
+#controls::selection {
+    background-color: #ff0000;
+    color: #dbdbdb;
+}
+
+#controls .settings {
     display: flex;
     justify-content: space-between;
+    margin: 5px;
 }
 
 #controls label {
@@ -36,6 +43,9 @@
     width: 60px;
     outline: none;
     appearance: textfield;
+    background: unset;
+    color: unset;
+    text-align: end;
 }
 
 .button {
@@ -43,14 +53,14 @@
     width: fit-content;
     padding: 4px;
     text-align: center;
-    border: 4px solid #808080;
-    background-color: #808080;
-    color: aliceblue;
+    border: 4px outset #dbdbdb;
+    background-color: rgb(180, 180, 180);
+    color: #303030;
 
 }
 
-.button:hover {
-    border: 4px outset #808080;
+#submit {
+    margin: 5 auto;
 }
 
 #edit {
@@ -105,7 +115,7 @@
     border: 4px outset #dbdbdb;
 }
 
-#reset:hover {
+#reset:hover, .button:hover{
     border: 4px inset #dbdbdb;
 }
 
@@ -133,7 +143,9 @@
     background-color: rgb(180, 180, 180);
     aspect-ratio: 1/1;
     border: 3px outset #dbdbdb;
+    outline: 1.5px solid #929292;
     background-size:cover;
+    image-rendering: crisp-edges;
     width: 16px;
 }
 
@@ -145,6 +157,4 @@
 .uncovered {
     background-color: #dbdbdb;
     border: 3px solid #dbdbdb;
-    outline: 1.5px solid #929292;
-    outline-offset: -1px;
 }
