--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,7 @@
 #minesweeper {
     position: relative;
     width: fit-content;
-    margin: auto;
-    margin-top: 50px;
+    margin: 50px auto;
     background-color: rgb(180, 180, 180);
     border: 4px solid rgb(180, 180, 180);
 }
@@ -63,9 +62,16 @@
     margin: 5 auto;
 }
 
-#edit {
+#edit, #help {
     position: absolute;
+}
+
+#edit {
     top: -46px;
+}
+
+#help {
+    bottom: -46px;
 }
 
 #info {
